# hasura-dapr-background-job

./: README.md  process_job.py  pyproject.toml  run-dapr-for-publisher.sh  run-dapr-for-subscriber.sh
components/: pubsub.yaml  subscription.yaml
hasura/metadata/databases/default/tables/: public_job.yaml  tables.yaml
hasura/migrations/default/1660454069243_create_table_public_job/: up.sql
